Update height of body to fix white space issues

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,9 @@
     padding: 0;
 }
 
-html body {
+html, body {
     margin: 0;
+    height: 100%;
 }
 
 .main-container {
